# learn-opengl

./: CMakeLists.txt  CMakePresets.json  README.md
1-getting-started/src/: main.cpp
2-lighting/shaders/: cube_fragment.glsl  cube_vertex.glsl  lamp_vertex.glsl
2-lighting/src/: data.h  main.cpp  materials.h
3-model-loading/: CMakeLists.txt
3-model-loading/shaders/: fragment.glsl  vertex.glsl
3-model-loading/src/: main.cpp  mesh.cpp  mesh.h  model.cpp  model.h
4-advanced-opengl/shaders/: base_vertex.glsl  color_fragment.glsl  cube_fragment.glsl  cube_vertex.glsl  frag_model.glsl  fragment.glsl  geom_normal.glsl  geometry.glsl  screen_fragment.glsl  screen_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vert.glsl  vert_cube.glsl  vert_model.glsl  vert_normal.glsl  vert_rock.glsl  vertex.glsl
4-advanced-opengl/src/: data.h  main.cpp
common/: camera.cpp  camera.h  constants.h  glad.c  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
include/glad/: gl.h  glad.h
include/stb_image/: stb_image.h
src/: camera.cpp  data.h  main.cpp  shader.cpp  shader.h
src/shaders/: fragment.glsl  vertex.glsl
